# wMule

./: .gga  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Kamulebuild_amuled.bat  Kamulecompile_amuled.bat  README.Debian-Packages  README.md  _debug_cmd.txt  build_configure.bat  build_ninja.bat  compile_flags.txt  config.h.cm  configure.ps1  do_build.ps1  do_build_ninja.bat  do_configure.ps1  msvc_toolchain.cmake  run_cmake.bat  skills-lock.json  vcpkg.json  version.rc.in  wmule.rc
.atl/: skill-registry.md
.github/workflows/: windows-ci.yml
assets/locale/ar/LC_MESSAGES/: wmule.mo
assets/locale/ast/LC_MESSAGES/: wmule.mo
assets/locale/bg/LC_MESSAGES/: wmule.mo
assets/locale/ca/LC_MESSAGES/: wmule.mo
assets/locale/cs/LC_MESSAGES/: amule.mo
assets/locale/da/LC_MESSAGES/: amule.mo
assets/locale/de/LC_MESSAGES/: amule.mo
assets/locale/el/LC_MESSAGES/: wmule.mo
cmake/: cryptopp.cmake  msvc-system-paths.cmake  options.cmake  source-vars.cmake  wx.cmake
docs/: Auditoria_Seguridad_aMule.md  BUILD_MEMORY.md  CMakeLists.txt  FASE7_TESTING_Y_CI.md  GENTLE_AI_ONBOARDING.md  PLAN_MODERNIZACION_2.0.md  PLAN_MODERNIZACION_COMPLETADO.md  README_DEV.md  SDD_EXPLORE_ARQUITECTURA_REAL_WMULE.md  blueprint.md  i18n.md
docs/debug/: logging-reclassification.md  threading.md
docs/history/: INSTALL  PLAN_MODERNIZACION_WINDOWS.md  README
docs/man/: CMakeLists.txt  amulecmd.1  amulecmd.de.1  amulecmd.es.1  amulecmd.fr.1  amulecmd.hu.1  amulecmd.it.1  amulecmd.ro.1  amulecmd.ru.1  amulecmd.tr.1  amulecmd.zh_TW.1  amulegui.1  amulegui.de.1  amulegui.es.1  amulegui.fr.1  amulegui.hu.1  amulegui.it.1  amulegui.ro.1  amulegui.ru.1  amulegui.tr.1  amulegui.zh_TW.1  amuleweb.1  amuleweb.de.1  amuleweb.es.1  amuleweb.fr.1  amuleweb.hu.1  amuleweb.it.1  amuleweb.ro.1  amuleweb.ru.1  amuleweb.tr.1  amuleweb.zh_TW.1
docs/man/po/: manpages-de.po  manpages-es.po  manpages-fr.po  manpages-hu.po  manpages-it.po  manpages-ro.po  manpages-ru.po  manpages-tr.po  manpages-zh_TW.po  manpages.pot
docs/plans/: 2026-03-24-network-parsing-tests.md  2026-03-24-upnp-ssrf-hardening.md
documentacion/: PLAN_MODERNIZACION_2.0.md
manual-tests/threading/: VerboseThreading.ps1
openspec/specs/concurrencia-core-ownership/: spec.md
openspec/specs/shutdown-lifecycle-threads/: spec.md
po/: CMakeLists.txt  POTFILES.in  amule.pot  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et_EE.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  it_CH.po  ja.po  ko_KR.po  lt.po  nl.po  nn.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sl.po  sq.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
scripts/: README.md  build-wmule.ps1  compile-translations.py  generate-pot.py  po2mo.py  sync_skills_library.ps1  update-translations.ps1  validate-local.ps1
src/: AddFriend.cpp  AsyncDNS.cpp  AsyncDNS.h  BarShader.cpp  BaseClient.cpp  BitVector.h  CMakeLists.txt  CatDialog.cpp  CatDialog.h  ChatSelector.cpp  ChatWnd.cpp  ChatWnd.h  ClientCredits.cpp  ClientCreditsList.cpp  ClientCreditsList.h  ClientList.cpp  ClientList.h  ClientRef.cpp  ClientRef.h  ClientTCPSocket.cpp  ClientTCPSocket.h  ClientUDPGuards.h  ClientUDPSocket.cpp  ClientUDPSocket.h  ColorFrameCtrl.cpp  CommentDialog.cpp  CorruptionBlackBox.cpp  CryptoPP_Inc.h  DataToText.cpp  DirectoryTreeCtrl.cpp  DownloadClient.cpp  DownloadListCtrl.cpp  DownloadQueue.cpp  DownloadQueue.h  ECSpecialMuleTags.cpp  ED2KLink.cpp  ED2KLinkParser.cpp  EMSocket.cpp  EMSocket.h  EditServerListDlg.cpp  (+134 more)
src/include/: ECPreferencesValidation.h
src/include/common/: ClientVersion.h.in
src/kademlia/kademlia/: Entry.cpp  Entry.h  Indexed.cpp  Kademlia.cpp  Kademlia.h  Prefs.cpp  Prefs.h  Search.cpp  SearchManager.cpp  UDPFirewallTester.cpp
src/kademlia/net/: KadPacketGuards.h  KademliaUDPListener.cpp  KademliaUDPListener.h
src/kademlia/routing/: Contact.cpp  RoutingBin.cpp  RoutingBin.h  RoutingZone.cpp  RoutingZone.h
src/kademlia/utils/: UInt128.cpp  UInt128.h
src/libs/common/: AsyncSocket.cpp  AsyncSocket.h  CMakeLists.txt  FileFunctions.cpp  FileFunctions.h  Format.h  MuleDebug.cpp  Path.cpp  Path.h  SecretHash.cpp  SecretHash.h  SmartPtr.h  StringFunctions.h  TextFile.cpp  TextFile.h  ThreadPool.cpp  ThreadPool.h  strerror_r.c
src/libs/common/threading/: ThreadGuards.cpp  ThreadGuards.h
src/libs/ec/abstracts/: ECCodes.abstract
src/libs/ec/cpp/: CMakeLists.txt  ECCodes.h  ECFileConfig.h  ECMuleSocket.cpp  ECSocket.cpp  ECSocket.h  ECSpecialTags.cpp  ECSpecialTags.h  ECTag.cpp  ECTag.h  ECUInt128.cpp  RemoteConnect.cpp
src/utils/aLinkCreator/src/: CMakeLists.txt  alc.cpp  alcc.cpp  alcframe.cpp  ed2khash.cpp  ed2khash.h  md4.cpp
src/utils/amps/: README
src/utils/amps/langs/: ca.inc  de.inc  en.inc  es.inc  eu.inc  fi.inc  fr.inc  hu.inc  it.inc  nl.inc  pl.inc  pt.inc  pt_BR.inc
src/utils/fileview/: CMakeLists.txt  FileView.cpp
src/utils/scripts/MacOSX/: application_packager.sh  full_build.sh
src/utils/wxCas/: wxcas.desktop
src/utils/wxCas/src/: CMakeLists.txt  linuxmon.cpp  linuxmon.h  onlinesig.cpp  onlinesig.h  wxcas.cpp  wxcas.h  wxcascte.cpp  wxcascte.h  wxcasframe.cpp  wxcasframe.h  wxcaspix.cpp  wxcaspix.h  wxcasprefs.cpp  wxcasprefs.h  wxcasprint.cpp  wxcasprint.h
src/webserver/default/: amuleweb-main-log.php
src/webserver/src/: CMakeLists.txt  WebInterface.cpp  WebInterface.h  WebServer.cpp  WebServer.h  WebSocket.cpp  missing-template.html  php_core_lib.cpp  php_lexer.c
unittests/muleunit/: CMakeLists.txt  test.h
unittests/tests/: CMakeLists.txt  CTagTest.cpp  CUInt128Test.cpp  ClientUDPTest.cpp  DownloadBenchmark.cpp  DownloadQueueRaceTest.cpp  ECPreferencesValidationTest.cpp  FileDataIOTest.cpp  FormatTest.cpp  InternalPathGuardsTest.cpp  InternalPathTestHelpers.h  KadHandlerFuzzTest.cpp  KadPacketGuardsTest.cpp  ModernizationTest.cpp  PartFileAsyncTaskTest.cpp  PathTraversalTest.cpp  ShutdownSmokeTest.cpp  ThreadPoolBenchmark.cpp  ThreadPoolLifecycleTest.cpp  ThreadingGuardsTest.cpp  ThreadingTestStubs.cpp  UPnPFeedbackPolicyTest.cpp  UPnPUrlUtilsTest.cpp  UPnPXmlSafetyTest.cpp
(+35 files in other folders)
